<resources>
    <string name="app_name">Tasweer Pay Shayari</string>
    <string name="editor">Editor</string>
    <string name="creation">Creation</string>
    <string name="facebook">Facebook</string>
    <string name="custom_text">Custom Text</string>
    <string name="choose_poetry">Choose Poetry</string>
    <string name="blend_images">Blend Images</string>
    <string name="urdu_keyboard">Urdu Keyboard</string>
    <string name="ishq">عشق</string>
    <string name="bewafa">ے وفا</string>
    <string name="dosti">دوستی</string>
    <string name="khushi">خوشی</string>
    <string name="barish">بارش</string>
    <string name="gazal">غزل</string>
    <string name="allamaIqbal">علامہ اقبال</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="action_complete">完成</string>
    <string name="double_click_input_text">双击输入文字</string>
    <string name="add_sticker">添加贴纸</string>
    <string name="add_bubble">添加气泡</string>
    <string name="complete">完成</string>
    <string name="publish_comment">说点什么呗……</string>
    <string name="over_text_limit">您已超过字数限制</string>
</resources>
