<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.beautiful.soundss.poetryeditor.Activities.ChoosePoetryActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">



        <android.support.design.widget.TabLayout
            android:id="@+id/tabsEvents"
            android:layout_width="match_parent"
            app:tabGravity="fill"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:text="@string/ishq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <android.support.design.widget.TabItem
                android:text="@string/bewafa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TabItem
                android:text="@string/dosti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <android.support.design.widget.TabItem
                android:text="@string/khushi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TabItem
                android:text="@string/barish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <!--<android.support.design.widget.TabItem-->
                <!--android:text="@string/gazal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

            <android.support.design.widget.TabItem
                android:text="@string/allamaIqbal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/containerEvents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</LinearLayout>
