<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/splash"
    tools:context="com.beautiful.soundss.poetryeditor.Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1"
        android:layout_height="wrap_content">



        <Button
            android:id="@+id/editorID"
            android:text="@string/editor"
            android:textSize="18sp"
            android:layout_marginTop="80dp"
            android:drawableRight="@drawable/ic_editor"
            android:padding="5dp"
            android:gravity="center"
            android:elevation="12dp"
            android:theme="@style/MyButton"
            android:layout_width="280dp"
            android:layout_height="90dp"
            android:drawableEnd="@drawable/ic_editor" />

        <Button
            android:id="@+id/creationID"
            android:text="@string/creation"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:elevation="12dp"
            android:theme="@style/MyButton"
            android:drawableRight="@drawable/ic_creation"
            android:layout_width="280dp"
            android:layout_height="90dp"
            android:drawableEnd="@drawable/ic_creation" />

        <Button
            android:id="@+id/facebookID"
            android:layout_marginTop="15dp"
            android:layout_width="280dp"
            android:layout_height="90dp"
            android:elevation="12dp"
            android:theme="@style/MyButton"
            android:drawableEnd="@drawable/ic_facebook_logo"
            android:drawableRight="@drawable/ic_facebook_logo"
            android:padding="9dp"
            android:text="@string/facebook"
            android:textSize="18sp" />


    </LinearLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main">


        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <ImageButton
                    android:layout_width="60dp"
                    android:elevation="12dp"
                    android:theme="@style/MyButton"
                    android:src="@drawable/ic_more_apps"
                    android:drawableTint="@color/colorPrimary"
                    android:layout_height="60dp" />

                <TextView
                    android:text="Apps"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content">


                <ImageButton
                    android:id="@+id/rateUsID"
                    android:src="@drawable/ic_rate_us"
                    android:layout_width="60dp"
                    android:drawableTint="@color/colorPrimary"
                    android:elevation="12dp"
                    android:theme="@style/MyButton"
                    android:layout_height="60dp" />

                <TextView
                    android:text="Rate Us"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:src="@drawable/ic_rate_us"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp">


                <ImageButton
                    android:id="@+id/shareID"
                    android:layout_width="60dp"
                    android:src="@drawable/ic_share_dashboard"
                    android:elevation="12dp"
                    android:theme="@style/MyButton"
                    android:layout_height="60dp" />

                <TextView
                    android:text="Share"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp">


                <ImageButton
                    android:layout_width="60dp"
                    android:elevation="12dp"
                    android:theme="@style/MyButton"
                    android:src="@drawable/ic_block_ad"
                    android:layout_height="60dp" />

                <TextView
                    android:text="Ads Block"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>



</LinearLayout>
